--- a/src/main/templates/site.css
+++ b/src/main/templates/site.css
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <style>:root {
+:root {
     --border-color: rgb(232, 235, 238);
 }
 
@@ -45,27 +40,4 @@ nav.main-menu ul {
 nav.main-menu li {
     margin: 0;
     padding: 8px 11px;
-}</style>
-    
-<title>Gradient Tape</title>
-
-</head>
-
-<body>
-    <nav class="main-menu">
-        <div class="brand">
-            <img src="https://github.com/gradienttape.png" />
-            <span>Gradient Tape</span>
-        </div>
-        <div>
-            <ul>
-                <li>All Posts</li>
-                <li>Free Youtube Videos</li>
-            </ul>
-        </div>
-    </nav>
-
-    
-</body>
-
-</html>
+}
