--- a/src/main/templates/site.css
+++ b/src/main/templates/site.css
@@ -1,8 +1,15 @@
 :root {
     --border-color: rgb(232, 235, 238);
     --background-color-hover: rgb(242, 245, 248);
-
+    --card-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     --content-max-width: 1200px;
+    --transition-time: 0.2s;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html,
@@ -10,6 +17,21 @@ body {
     margin: 0;
     width: 100%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+a {
+    color: cornflowerblue;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* Utils */
+
+.p22 {
+    padding: 22px;
 }
 
 /* Navbar */
@@ -68,7 +90,7 @@ nav.main-menu li a {
 nav.main-menu li a:hover {
     background-color: var(--background-color-hover);
     border-radius: 8px;
-    transition: 0.25s;
+    transition: var(--transition-time);
 }
 
 /* Footer */
@@ -77,6 +99,9 @@ nav.main-menu li a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-top: 1px solid var(--border-color);
+    padding: 8px 22px;
+    margin-top: 40px;
 }
 
 footer.main-footer {
@@ -87,4 +112,141 @@ footer.main-footer {
     box-sizing: border-box;
     flex: 1;
     padding: 8px 22px;
+}
+
+/* Main Content */
+
+.main-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main {
+    max-width: var(--content-max-width);
+    flex: 1;
+}
+
+/* Post */
+
+.post {
+    padding: 22px;
+}
+
+.post img.cover {
+    width: 100%;
+    height: auto;
+}
+
+.featured-posts-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+    column-gap: 22px;
+    row-gap: 22px;
+}
+
+@media (max-width: 700px) {
+    .featured-posts-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 450px) {
+    .featured-posts-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+.featured-post {
+    border-radius: 8px;
+    border: 1px solid var(--border-color);
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    transition: var(--transition-time);
+    text-decoration: none;
+    color: inherit;
+}
+
+.featured-post:hover {
+    box-shadow: var(--card-box-shadow);
+}
+
+.featured-post .cover {
+    width: 100%;
+    height: 100px;
+    background-size: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.featured-post .title {
+    padding: 8px;
+    font-size: 1.25rem;
+    font-weight: bolder;
+}
+
+.featured-post .description {
+    padding-top: 0;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+}
+
+.recent-posts-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    row-gap: 22px;
+}
+
+.recent-post a.title {
+    font-size: 1.25rem;
+    font-weight: bolder;
+}
+
+/* Pagination */
+.post-pagination-wrapper {
+    display: flex;
+    justify-content: center;
+    padding-top: 22px;
+    border-top: 1px solid var(--border-color);
+}
+
+.post-pagination-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 0;
+}
+
+.post-pagination-container .prev,
+.post-pagination-container .next {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--border-color);
+    padding: 8px 22px;
+}
+
+.post-pagination-container .prev {
+    border-right: none;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.post-pagination-container .next {
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.post-pagination-container .disabled {
+    background-color: var(--border-color);
+}
+
+.post-pagination-container .disabled {
+    color: inherit;
+    text-decoration: none;
+    cursor: not-allowed;
 }
