--- a/src/main/templates/post.html
+++ b/src/main/templates/post.html
@@ -5,9 +5,11 @@
 {% endblock %}
 
 {% block body %}
-<div class="post">
-    <img class="cover" src="{{ cover_img }}">
-    <h1>{{ title }}</h1>
-    <div>{{ text }}</div>
+<div class="base-section mt22">
+    <div class="post">
+        <img class="cover" src="{{ cover_img }}">
+        <h1>{{ title }}</h1>
+        <div>{{ text }}</div>
+    </div>
 </div>
 {% endblock %}
