--- a/src/main/templates/posts_list.html
+++ b/src/main/templates/posts_list.html
@@ -6,28 +6,30 @@
 
 {% block body %}
 
-<h2 class="p22">{{ title }}</h2>
-<div class="recent-posts-container p22">
-    {% for post in posts %}
-    <div class="recent-post">
-        <a class="title" href="/posts/{{ post.slug }}.html">{{ post.title }}</a>
-        <div class="description">{{ post.description }}</div>
+<div class="base-section mt22">
+    <h2 class="p22">{{ title }}</h2>
+    <div class="recent-posts-container p22">
+        {% for post in posts %}
+        <div class="recent-post">
+            <a class="title" href="/posts/{{ post.slug }}.html">{{ post.title }}</a>
+            <div class="description">{{ post.description }}</div>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
-<div class="post-pagination-wrapper">
-    <div class="post-pagination-container">
-        {% if not is_first_page %}
-        <a class="prev" href="/posts_{{ current_page - 1 }}.html">&lt; Previous</a>
-        {% else %}
-        <a class="prev disabled" href="#">&lt; Previous</a>
-        {% endif %}
+    <div class="post-pagination-wrapper">
+        <div class="post-pagination-container">
+            {% if not is_first_page %}
+            <a class="prev" href="/posts_{{ current_page - 1 }}.html">&lt; Previous</a>
+            {% else %}
+            <a class="prev disabled" href="#">&lt; Previous</a>
+            {% endif %}
 
-        {% if has_next_page %}
-        <a class="next" href="/posts_{{ current_page + 1 }}.html">Next &gt;</a>
-        {% else %}
-        <a class="next disabled" href="#">Next &gt;</a>
-        {% endif %}
+            {% if has_next_page %}
+            <a class="next" href="/posts_{{ current_page + 1 }}.html">Next &gt;</a>
+            {% else %}
+            <a class="next disabled" href="#">Next &gt;</a>
+            {% endif %}
+        </div>
     </div>
 </div>
 
