--- a/src/main/templates/site.css
+++ b/src/main/templates/site.css
@@ -10,6 +10,11 @@
     --footer-color: #f0f0f0;
 }
 
+::selection {
+    color: black;
+    background-color: var(--yellow-color);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -20,6 +25,9 @@ html,
 body {
     margin: 0;
     width: 100%;
+    background-color: #fefefe;
+    background-image: radial-gradient(#404344 1px, #fdfdfd 1px);
+    background-size: 30px 30px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
@@ -38,10 +46,21 @@ a:hover {
     padding: 22px;
 }
 
+.mt22 {
+    margin-top: 22px;
+}
+
+.base-section {
+    background-color: white;
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    margin: 22px;
+}
+
 /* Navbar */
 
 #main-menu-container {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--dark-yellow-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,7 +87,7 @@ nav.main-menu .brand img {
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--dark-yellow-color);
     margin-right: 8px;
 }
 
@@ -177,7 +196,8 @@ footer.main-footer {
 }
 
 .featured-post:hover {
-    box-shadow: var(--card-box-shadow);
+    border-color: var(--dark-yellow-color);
+    box-shadow: 2px 2px var(--dark-yellow-color);
     text-decoration: none;
 }
 
@@ -218,7 +238,7 @@ footer.main-footer {
 .post-pagination-wrapper {
     display: flex;
     justify-content: center;
-    padding-top: 22px;
+    padding: 22px;
     border-top: 1px solid var(--border-color);
 }
 
