--- a/src/main/templates/post.html
+++ b/src/main/templates/post.html
@@ -8,8 +8,10 @@
 <div class="base-section mt22">
     <div class="post">
         <img class="cover" src="{{ cover_img }}">
-        <h1>{{ title }}</h1>
-        <div>{{ text }}</div>
+        <div class="content">
+            <h1>{{ title }}</h1>
+            <div>{{ text }}</div>
+        </div>
     </div>
 </div>
 {% endblock %}
