--- a/src/main/templates/site.css
+++ b/src/main/templates/site.css
@@ -21,10 +21,15 @@
     box-sizing: border-box;
 }
 
-html,
+html {
+    height: 100%;
+}
+
 body {
-    margin: 0;
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    height: 100%;
     background-color: #fefefe;
     background-image: radial-gradient(#404344 1px, #fdfdfd 1px);
     background-size: 30px 30px;
@@ -32,11 +37,12 @@ body {
 }
 
 a {
-    color: cornflowerblue;
+    color: var(--yellow-color);
     text-decoration: none;
 }
 
 a:hover {
+    color: var(--dark-yellow-color);
     text-decoration: underline;
 }
 
@@ -65,6 +71,8 @@ a:hover {
     align-items: center;
     justify-content: center;
     background-color: var(--yellow-color);
+    position: sticky;
+    top: 0;
 }
 
 nav.main-menu {
@@ -143,8 +151,9 @@ footer.main-footer {
 
 .main-container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    flex: 1;
 }
 
 .main {
@@ -154,13 +163,15 @@ footer.main-footer {
 
 /* Post */
 
-.post {
-    padding: 22px;
-}
-
 .post img.cover {
     width: 100%;
     height: auto;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.post .content {
+    padding: 22px;
 }
 
 .featured-posts-container {
