--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
         <nav class="main-menu">
             <div class="brand">
                 <a href="/">
-                    <img src="https://github.com/gradienttape.png" />
+                    <img src="https://github.com/gradienttape.png" alt="gradient-tape-logo" />
                     <span>Gradient Tape</span>
                 </a>
             </div>
