--- a/src/main/templates/post.html
+++ b/src/main/templates/post.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="base-section mt22">
     <div class="post">
-        <img class="cover" src="{{ cover_img }}">
+        <img class="cover" src="{{ cover_img }}" alt="cover image for post {{ title }}">
         <div class="content">
             <h1>{{ title }}</h1>
             <div>{{ text }}</div>
